# axum-graphql-playground

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs
src/models/: author.rs  book.rs  mod.rs
src/routes/: mod.rs
