[package]
name = "axum-graphql-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
async-graphql = "5"
async-graphql-axum = "5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
rocksdb = "0.21.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4"] }
anyhow = "1.0.71"
